<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.faq.Faq">

    <TextView
        android:id="@+id/textView30"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="44dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/hallo_fishku_partner"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView33"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/kami_siap_membantu_anda"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/textView30"
        app:layout_constraintTop_toBottomOf="@+id/textView30" />

    <TextView
        android:id="@+id/textView34"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/saya_mengalami_kesulitan"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/textView33"
        app:layout_constraintTop_toBottomOf="@+id/textView33" />

    <TextView
        android:id="@+id/textView37"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/solusi_cepat"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextSearchFaq" />


    <include
        android:id="@+id/list_caption"
        layout="@layout/list_caption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textView37" />


    <TextView
        android:id="@+id/textView36"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/yang_biasa_orang_tanyain"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/list_caption" />

    <EditText
        android:id="@+id/editTextSearchFaq"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/edit_text_background"
        android:drawableStart="@drawable/baseline_search_24"
        android:drawablePadding="12dp"
        android:ems="10"
        android:fontFamily="@font/poppins_regular"
        android:hint="@string/nama_lengkap"
        android:inputType="textEmailAddress"
        android:paddingStart="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView34"
        app:layout_constraintTop_toBottomOf="@+id/textView34" />


    <View
        android:id="@+id/divider"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView36" />

    <View
        android:id="@+id/divider4"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:layout_marginBottom="24dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toTopOf="@+id/btn_wa"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toTopOf="@+id/divider4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView36" />

    <Button
        android:id="@+id/btn_wa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/edit_text_background"
        android:backgroundTint="@color/white"
        android:drawableLeft="@drawable/whatsapp_logo"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/hubungi_wa"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_ig"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:background="@drawable/edit_text_background"
        android:drawableLeft="@drawable/instalogo"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/instagram"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="@+id/btn_wa" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.50" />

</androidx.constraintlayout.widget.ConstraintLayout>