<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded_corner">

    <TextView
        android:id="@+id/textView17"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/my_budget"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tv_count_of_budget"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/_1_600_00"
        android:textSize="24sp" />


    <Button
        android:id="@+id/btn_wd"
        app:layout_constraintEnd_toStartOf="@+id/guideline17"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_count_of_budget"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginHorizontal="8dp"
        android:layout_marginVertical="16dp"
        android:drawableLeft="@drawable/baseline_account_balance_wallet_24"
        android:text="@string/wd" />

    <Button
        android:id="@+id/sell"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline17"
        app:layout_constraintTop_toBottomOf="@+id/tv_count_of_budget"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginVertical="16dp"
        android:drawableLeft="@drawable/baseline_add_box_24"
        android:text="@string/jual_ikan" />


    <TextView
        android:id="@+id/textView30"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_wd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginHorizontal="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="35dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/budget_overview"
        android:textSize="16sp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline17"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView30"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/rounded_corner"
        android:backgroundTint="@color/white">

        <ImageView
            android:id="@+id/imageView3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginVertical="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/baseline_insert_chart_outlined_24" />

        <TextView
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginVertical="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:drawableStart="@drawable/baseline_swap_vert_24"
            android:text="3,75%"
            android:textColor="#03C988" />

        <TextView
            android:id="@+id/textView31"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginVertical="16dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/riwayat_pendapat" />

        <TextView
            android:id="@+id/tv_my_budget"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView31"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginVertical="8dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/_2000_00" />

        <ImageView
            android:id="@+id/img_download_budget"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView31"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginHorizontal="8dp"
            android:layout_marginVertical="8dp"
            android:src="@drawable/baseline_arrow_circle_down_24" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline17"
        app:layout_constraintTop_toBottomOf="@+id/textView30"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/rounded_corner"
        android:backgroundTint="@color/white">

        <ImageView
            android:id="@+id/img_chart_fish_price"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginVertical="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/baseline_insert_chart_outlined_24" />

        <TextView
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginVertical="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:drawableStart="@drawable/baseline_swap_vert_red_24"
            android:text="@string/_1_75"
            android:textColor="#D21312" />

        <TextView
            android:id="@+id/textView32"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_chart_fish_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginVertical="16dp"
            android:fontFamily="@font/poppins_regular"
            android:text="Kisaran Harga Ikan" />

        <TextView
            android:id="@+id/tv_kisaranikan"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView32"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginVertical="8dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/_5_kg" />

        <ImageView
            android:id="@+id/btn_down_kisaranikan"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView32"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginHorizontal="8dp"
            android:layout_marginVertical="8dp"
            android:src="@drawable/baseline_arrow_circle_down_24" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="205dp" />
</androidx.constraintlayout.widget.ConstraintLayout>
